update new version of primereact

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.7'
 services:
     app:
-        user: 1000:1000
         build:
             context: .
             dockerfile: Dockerfile
@@ -10,6 +9,6 @@ services:
                 - project_name=${APP_NAME}
         image: ${APP_NAME}
         volumes:
-            - /var/www/boilerplate-reactts:/var/www/${APP_NAME}
+            - ./:/var/www/${APP_NAME}
         ports:
             - 3000:3000
